completeing some part of the readMe file (How to run)